<resources>
    <string name="base_to_feedback">feedback</string>
    <string name="base_to_login">login</string>
    <string name="base_to_mine">mine</string>
    <string name="base_to_reserve">reserve</string>
    <string name="base_to_scene">scene</string>
    <string name="base_to_setting">setting</string>
    <string name="base_dialog_confirm">确认</string>
    <string name="base_dialog_cancel">取消</string>
    <string name="base_menu_filter_label">筛选</string>
    <string name="base_menu_search_label">搜索</string>
    <string name="base_menu_sort_label">排序</string>
    <string name="base_load_view_label">加载中</string>
    <string name="base_empty_view_label">当前数据为空</string>
    <string name="base_menu_sort_by_name_label">名称</string>
    <string name="base_menu_sort_by_seat_label">空位</string>
    <string name="base_menu_sort_reverse_label">逆序</string>
    <string name="base_organization_transition_name">organization_transition_name</string>
</resources>