<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:title="@string/base_menu_sort_label">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:checked="true"
                    android:id="@+id/sort_by_name"
                    android:title="@string/base_menu_sort_by_name_label" />
                <item
                    android:id="@+id/sort_by_person"
                    android:title="@string/base_menu_sort_by_seat_label" />
            </group>
            <item
                android:id="@+id/reverse_sort"
                android:checkable="true"
                android:title="@string/base_menu_sort_reverse_label" />
        </menu>
    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/base_menu_search_label"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>